# just_reserved

./: .envrc  .gitignore  .local.env  config.py  dall_e_test.py  deepai_test.py  ft_views.py  main_app.py  manage.py  pyproject.toml  test_bs.py
.run/: django.run.xml  run_app.run.xml
bookings/: controls.py  forms.py  models.py  views.py
bookings/migrations/: 0001_initial.py
bookings/templates/: delete_booking.html  email_verification.html  email_verification.txt
client/: pubspec.yaml
client/android/app/: build.gradle
client/android/app/src/debug/: AndroidManifest.xml
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/kotlin/app/marysia/just_reserved/: MainActivity.kt
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/ios/Runner/Assets.xcassets/AppIcon.appiconset/: Contents.json
client/ios/Runner/Assets.xcassets/LaunchImage.imageset/: Contents.json
client/lib/: main.dart
client/linux/: CMakeLists.txt  my_application.cc
client/macos/Runner.xcodeproj/: project.pbxproj
client/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
client/macos/Runner/Configs/: AppInfo.xcconfig
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
client/windows/runner/: Runner.rc  main.cpp
flet_calendar_control/: flet_calendar_control.py
just_reserved/: asgi.py  settings.py  urls.py  wsgi.py
utils/: __init__.py  date_time.py  week.py
