[tool.poetry]
name = "just-reserved"
version = "1.0.5"
description = ""
authors = ["Adam Beret Manczuk <beret@hipisi.org.pl>"]
readme = "README.md"
packages = [{include = "just_reserved"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "<4.1"
django-scheduler = "^0.10.1"
#django-bower = "^5.2.0"
django-extensions = "^3.2.1"
werkzeug = "^2.2.2"
#holidays = "^0.21"
nptime = "^1.1"
nltk = "^3.8.1"
beautifulsoup4 = "^4.11.2"
injector = "^0.20.1"
flet = "^0.4.2"
#flet-django = { git = "https://github.com/Marysia-Software-Limited/flet-django.git", develop = true}
beret-utils = "^0.4.8"
requests = "^2.28.2"
pillow = "^9.4.0"
django-cms = "^3.11.1"
djangocms-link = "^3.1.1"
djangocms-file = "^3.0.0"
djangocms-picture = "^4.0.0"
djangocms-video = "^3.0.0"
djangocms-googlemap = "^2.0.0"
djangocms-snippet = "^3.1.0"
djangocms-style = "^3.0.0"
django-sekizai = "^4.0.0"
openai = "^0.27.2"



[tool.poetry.dev-dependencies]
# for local development only
#flet-core = {path = "../flet/sdk/python/packages/flet-core", develop = true}
#flet = {path = "../flet/sdk/python/packages/flet", develop = true}
flet-django = {path = "../flet-django", develop = true}
#flet-core = { subdirectory = "sdk/python/packages/flet-core", git = "https://github.com/Marysia-Software-Limited/flet.git", branch = "flet-django", develop = true}
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
